Make sure we use the correct path for trix when confirming that our main.tx3 file validates against trix as part of CI process.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,9 @@ jobs:
       - name: Install Tx3 toolchain
         run: |
           curl --proto '=https' --tlsv1.2 -LsSf https://github.com/tx3-lang/up/releases/latest/download/tx3up-installer.sh | sh
-          echo "$HOME/.tx3/bin" >> $GITHUB_PATH
+          export PATH="$HOME/.cargo/bin:$PATH"
+          tx3up install
+          echo "$HOME/.tx3/default/bin" >> $GITHUB_PATH
 
       - name: Run trix check
         run: |
